# EnvDetector

./: .gitignore  README.md  README_UI.md  build.gradle.kts  settings.gradle.kts
app/: .gitignore  build.gradle.kts  local.properties
app/debug/: output-metadata.json
app/src/androidTest/java/com/example/checkrom/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/xiaxi/safety/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/checkrom/: MainActivity.java
app/src/main/java/com/xiaxi/safety/: App.kt  MainActivity.kt
app/src/main/java/com/xiaxi/safety/app/: DetectionResult.kt  NativeDetections.kt
app/src/main/java/com/xiaxi/safety/datastore/: AppSettingsDataStore.kt  AppSettingsSerializer.kt
app/src/main/java/com/xiaxi/safety/datastore/di/: DataStoreModule.kt
app/src/main/java/com/xiaxi/safety/datastore/model/: AppSettings.kt  AppSettingsEnums.kt
app/src/main/java/com/xiaxi/safety/repository/: AppSettingsRepository.kt
app/src/main/java/com/xiaxi/safety/ui/activity/: MainActivity.kt  MainScreen.kt
app/src/main/java/com/xiaxi/safety/ui/component/: CardItem.kt  SettingItem.kt
app/src/main/java/com/xiaxi/safety/ui/navigation/: Main.kt
app/src/main/java/com/xiaxi/safety/ui/navigation/graphs/: Home.kt  Settings.kt
app/src/main/java/com/xiaxi/safety/ui/providable/: LocalAppSettings.kt
app/src/main/java/com/xiaxi/safety/ui/screens/home/: Home.kt
app/src/main/java/com/xiaxi/safety/ui/screens/settings/: Settings.kt
app/src/main/java/com/xiaxi/safety/ui/screens/settings/category/: App.kt  Language.kt
app/src/main/java/com/xiaxi/safety/ui/theme/: Theme.kt  Type.kt
app/src/main/java/com/xiaxi/safety/viewmodel/: MainViewModel.kt  SettingsViewModel.kt
app/src/main/res/layout/: item_detection_result.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/example/checkrom/: ExampleUnitTest.java
app/src/test/java/com/xiaxi/safety/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
stub/: build.gradle
stub/src/androidTest/java/android/security/keystore/: ExampleInstrumentedTest.java
stub/src/main/java/android/security/keystore/: KeyGenParameterSpec_rename.java
stub/src/test/java/android/security/keystore/: ExampleUnitTest.java
xiaxiSafe/: build.gradle  proguard-rules.pro
xiaxiSafe/src/androidTest/java/com/xiaxi/safe/: ExampleInstrumentedTest.java
xiaxiSafe/src/main/: AndroidManifest.xml
xiaxiSafe/src/main/cpp/: CMakeLists.txt  ollvm-arkari-cfg.json  xxGuard.cpp  xxGuard.h
xiaxiSafe/src/main/cpp/antiDebug/: antiDebug.cpp  antiDebug.h
xiaxiSafe/src/main/cpp/antiDebug/guardPorcess/: guardPorcess.cpp  guardPorcess.h
xiaxiSafe/src/main/cpp/antiHook/: antiHook.cpp  antiHook.h
xiaxiSafe/src/main/cpp/antiHook/antiFrida/: antiFrida.cpp  antiFrida.h
xiaxiSafe/src/main/cpp/antiHook/antiPlt/: antiPlt.cpp  antiPlt.h
xiaxiSafe/src/main/cpp/antiHook/antiXPosed/: antiXPosed.cpp  antiXPosed.h
xiaxiSafe/src/main/cpp/antiInject/: checkMaps.cpp  checkMaps.h
xiaxiSafe/src/main/cpp/crypto/ARc4/: ARC4.cpp
xiaxiSafe/src/main/cpp/crypto/SM4/: ReadMe.md  sm4.c  sm4.h
xiaxiSafe/src/main/cpp/linkerInfo/: linkerInfo.cpp  linkerInfo.h
xiaxiSafe/src/main/cpp/mem/: memCrc.cpp  memCrc.h  memScan.cpp  memScan.h
xiaxiSafe/src/main/cpp/romEnv/: romEnv.cpp  romEnv.h  rootOfTrust.cpp  rootOfTrust.h
xiaxiSafe/src/main/cpp/rootOfTrust/: native_Asn1Utils.hpp  rootOfTrust.cpp  rootOfTrust.h
xiaxiSafe/src/main/cpp/util/: xiaxi_log.h
xiaxiSafe/src/main/cpp/util/elf_util/: elf_util.cpp  elf_util.h
xiaxiSafe/src/main/cpp/util/helper/: helper.cpp  helper.h
xiaxiSafe/src/main/cpp/util/hook_util/: CMakeLists.txt  hook_utils.cpp  hook_utils.h
xiaxiSafe/src/main/cpp/util/inlineASM/: linux_syscall_support.h  system_call.h
xiaxiSafe/src/main/cpp/util/inlineASM/raw_syscall/: syscall_AARCH_64.s  syscall_ARM_32.s
xiaxiSafe/src/main/cpp/util/jniRefInvoke/: jniRefInvoke.cpp  jniRefInvoke.h
xiaxiSafe/src/main/cpp/util/list/: list.h
xiaxiSafe/src/main/cpp/util/xdl/: CMakeLists.txt  xdl.c  xdl_iterate.c  xdl_linker.c  xdl_lzma.c
xiaxiSafe/src/main/java/com/xiaxi/safe/: XxEvent.java  XxEventProcess.java  XxSafe.java
xiaxiSafe/src/main/java/com/xiaxi/safe/util/: AppConfig.java  Asn1Attestation.java  Attestation.java  AttestationData.java  AttestationException.kt  CertificateInfo.java  EatAttestation.java  EnvDetector.java  EnvUtil.java  KeyAttestation.java  KeyGenParameterSpec_rename.java  KnoxAttestation.java  RootOfTrust.java
xiaxiSafe/src/main/java/com/xiaxi/safe/util/KeyAttestation/: Asn1Attestation.java  Asn1Utils.java  Attestation.java  AttestationApplicationId.java  AttestationData.java  AttestationException.kt  AttestationPackageInfo.java  AuthorizationList.java  CborUtils.java  CertificateInfo.java  EatAttestation.java  EatClaim.java  KeyAttestation.java  RootOfTrust.java
xiaxiSafe/src/main/java/com/xx/shell/: ACF.java  RiskCheckApplication.java
xiaxiSafe/src/main/res/values/: strings.xml
xiaxiSafe/src/main/res/values-zh-rCN/: strings.xml
xiaxiSafe/src/test/java/com/xiaxi/safe/: ExampleUnitTest.java
